deploy/app/deployment-manager.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bf42-servers
